# youtube-summarizer

./: .env.example  .gitignore  README.md  pyproject.toml
youtube_summarizer/: cli.py  summarizer.py
